# tskit_learn

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example.py
scikit_time/: __init__.py  autoregressivemodel.py  timeseriesmodel.py
test/: test.py  tests.py
tskit_learn/: __init__.py  autoregressivemodel.py  timeseriesmodel.py  utilitaires.py
