[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-time"
version = "0.1.0"
description = "A scikit-learn wrapper for time series"
authors = [
    {name = "Pierre Renucci", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Cnernc/scikit-time"
Repository = "https://github.com/Cnernc/scikit-time.git"

[tool.setuptools]
packages = ["scikit_time"] 