[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tskit_learn"
version = "0.1.0"
description = "A scikit-learn wrapper for time series"
authors = [
    {name = "Pierre Renucci", email = "renuccip@icloud.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Cnernc/tskit_learn"
Repository = "https://github.com/Cnernc/tskit_learn.git"

[tool.setuptools]
packages = ["tskit_learn"] 